# isro-rover-challenge

./: .gitignore  README.md
arm/arm_action_server/: package.xml  setup.cfg  setup.py
arm/arm_action_server/arm_action_server/: adding_gripper.py  test_client.py  trajectory_action_server.py
arm/arm_action_server/launch/: arm_action_server.launch.py  arm_action_server_withgripper.launch.py  arm_server_test.launch.py
arm/arm_planner/: package.xml  setup.cfg  setup.py
arm/arm_planner/arm_planner/: action_server_pick_place.py  adding_gripper.py  arm_planner_api.py  kinematic_solver.py  moveit_python_api.py
arm/follow_joint_trajectory_server/: package.xml
arm/follow_joint_trajectory_server/follow_joint_trajectory_server/: serial_arduino_node.py
arm/follow_joint_trajectory_server/launch/: trajectory_action_server.launch.py
arm/test_action/: package.xml  setup.py
arm/test_action/test_action/: test_action.py
arm/zine_moveit_config/: CMakeLists.txt  package.xml
arm/zine_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  moveit_cpp.yaml  ros2_controllers.yaml  zine_rover.srdf  zine_rover.urdf.xacro
arm/zine_moveit_config/launch/: arm_testing.launch.py  demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  python_api.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
arm_moveit/src/isro_config/: .setup_assistant  CMakeLists.txt  package.xml
arm_moveit/src/isroarm_description/: package.xml  setup.cfg  setup.py
base_station/: output.pgm  package.xml  pygame_map.py  pygame_map2.py  setup.cfg  setup.py
base_station/__MACOSX/: ._gray.pgm
base_station/base_station/: constants.py  mission_planner_gui.py  mission_planner_server.py  pygame_map2.py
base_station/config/: display.rviz
base_station/launch/: base_station.launch.py
hardware/: package.xml  setup.cfg  setup.py
hardware/hardware/: arm_serial_node.py  joint_state_publisher.py  odom_publisher.py  twist_to_arduino.py
hardware/launch/: arm_hardware.launch.py  arm_test.launch.py  arm_test_client.launch.py  arm_test_rviz.launch.py  base_hardware.launch.py  base_test.launch.py
isaac_ros-dev/src/action_servers/: package.xml
isaac_ros-dev/src/follow_joint_trajectory_server/: setup.cfg  setup.py
isaac_ros-dev/src/integrated_yolo/: setup.cfg  setup.py
isaac_ros-dev/src/interfaces/: package.xml
isaac_ros-dev/src/rover_stage_manager/: setup.cfg
isaac_ros-dev/src/test_action/: setup.cfg
navigation/behaviour_trees/action_servers/: setup.py
navigation/behaviour_trees/rover_stage_manager/: package.xml  setup.py
navigation/interfaces/: CMakeLists.txt
navigation/interfaces/action/: Calibration.action
navigation/map_server/: package.xml  setup.py
navigation/map_server/config/: map.yaml
navigation/map_server/launch/: map_server.launch.py
navigation/map_server/map_server/: map_node.py
navigation/zine_nvblox/: CMakeLists.txt  package.xml
navigation/zine_nvblox/launch/: isaac_sim_example.launch.py  nvblox_real.launch.py  nvblox_sim.launch.py  nvblox_zine.launch.py
perception/: error_correction.py  interpolation.py  object_detector.py  package.xml  setup.py
perception/integrated_yolo/: package.xml
perception/launch/: perception.launch.py
perception/perception/: object_detector.py
rover/zine_rover_description/: package.xml  setup.py
rover/zine_rover_description/config/: ekf.yaml  (+1 more)
zine/: start.sh
(+156 files in other folders)
