<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<name>arm_planner</name>
  <version>0.0.0</version>
<description>The planner package</description>
  <maintainer email="todo@todo.com">author</maintainer>
  <license>TODO: License declaration</license>

  <build_depend>moveit_commander</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>kdl_parser_py</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>moveit</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>kdl_parser_py</exec_depend>
  <member_of_group>ros2</member_of_group>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
